@@ -36,6 +36,10 @@ print "It is now " . haystack[S-2:S+2]
 #
 print ""
 #
+foo = sprintf("%40d %40d %40d %40d %40d %40d",1,2,3,4,5,6)
+if (strlen(foo) == 245) print "sprintf output of long strings works OK"
+if (strlen(foo) != 245) print "sprintf output of long strings BROKEN"
+print ""
 pause -1 "Hit return to continue"
 #
 set xrange [300:400]
